--- a/front/my-app/src/app/globals.css
+++ b/front/my-app/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Poetsen+One&display=swap");
 
 :root {
   --foreground-rgb: 0, 0, 0;
